# medical-rag-agent

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  start_backend.py
backend/: main.py
backend/api/: chat.py  ingest.py  setup.py
backend/lib/: __init__.py  ai_agent.py  ai_query_classifier.py  data_ingestion.py  database.py  embeddings.py  error_handling.py  knowledge_graph.py  rag_pipeline.py
backend/models/: database.py  schemas.py
examples/: api-ingestion-examples.md  data-formats.md
scripts/: download_data.py  generate_embeddings_postgresql.py  generate_sample_data.py  pg.py  setup_postgresql_from_scratch.py  validate_postgresql_setup.py
src/app/: globals.css  page.tsx
src/components/: ChatInterface.tsx  ThemeToggle.tsx
src/contexts/: ThemeContext.tsx
src/lib/: api-config.ts
src/types/: index.ts
